Update slide titles.

--- a/slides/index.html
+++ b/slides/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Reactive Programming for Couch Potatoes</title>
+    <title>Git Smart: Intro to Git and GitHub</title>
     <meta charset="utf-8">
     <style>
       /* Color scheme: https://coolors.co/app/f4f1de-e07a5f-3d405b-81b29a-f2cc8f */
